* string.c (rb_str_start_with, rb_str_end_with): raise an error if   an argument is not convertible to a String.   [ruby-core:40623][Bug #5536]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35213 b2dd03c8-39d4-4d8f-98ff-823fe69b080e